fix: :bug: weird bug content disappear on resize because of custom scrollbar it took me two days help

--- a/src/Window/Window.module.scss
+++ b/src/Window/Window.module.scss
@@ -16,7 +16,6 @@ $borderRadius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
     height: 100%;
     width: 100%;
-    outline: 1px solid rgba(var(--accent-color), 0.30);
     color: white;
     position: relative;
     overflow: hidden;
@@ -35,6 +34,8 @@ $borderRadius: 8px;
     //   opacity: 0;
     // }
   }
+
+
   
   .body{
     // padding: $padding;
